2007-08-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailBodyPart.m ([SOGoMailBodyPart
	-lookupName:_keyinContext:_ctxacquire:_flag]): do not require the
	filename to have an extension, and thus accept any filename.

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-currentCName]): new method that returns the c_name of the
	contact, correctly escaped to be passed by url afterwards.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartHTMLViewer -flatContentAsString]): pass the NSData
	instance of [self decodedFlatContent] instead of the buggy
	NSString from [super flatContentAsString] to the parser.

2007-08-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailActions.m ([UIxMailActions -deleteAction]):
	new category method to reponds to the "delete" web command on
	drafts.
	([UIxMailActions -deleteAttachmentAction]): new category method to
	reponds to the "deleteAttachment" web command on drafts, taking
	the "filename" url parameter into account.

	* SoObjects/Mailer/SOGoMailObject+Draft.m ([SOGoMailObject
	-contentForEditing]): new method that retrieve the editable mail
	content.
	([SOGoMailObject -fetchFileAttachmentKeys]): new method that
	returns the body keys for attached files (parts with a "filename"
	attribute).

	* SoObjects/Mailer/SOGoDraftObject.m ([NSString
	-asQPSubjectString:encoding]): do not change the string if the
	encoded string has the same length (which means it is already
	7bit-safe).
	([SOGoDraftObject -fetchMailForEditing:sourceMail]): new method
	that retrieve a draft along with its attachments for editing.
	([SOGoDraftObject -mimeHeaderMapWithHeaders:_headers]): no longer
	choke if the "to" header field is empty.
	([SOGoDraftObject -delete]): new method to delete the draft folder
	whenever operations are done.

2007-08-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailEditor.m ([-patchFlagsInStore]): removed